--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -140,6 +140,10 @@
                 <a href="#settings">SETTINGS</a>
                 <hr align="center">
             </div>
+            <div class="url">
+                <a href="{% url 'saved_events' %}">MY VOLUNCHEERS</a>
+                <hr align="center">
+            </div>
         </div>
     </div>
     <!-- Main -->
