change filter to OOP, add map icon and search placeholder

--- a/voluncheer/templates/navbar.html
+++ b/voluncheer/templates/navbar.html
@@ -5,6 +5,11 @@
   </div>
   <ul>
     <li>
+      <a href="{% url 'map' %}">
+        <i class="fa fa-map fa-2x"></i>
+      </a>
+    </li>
+    <li>
       <a href="{% url 'opportunityboard' %}">
         <i class="fa fa-th fa-2x"></i>
       </a>
