chat page showing up again

--- a/voluncheer/templates/navbar.html
+++ b/voluncheer/templates/navbar.html
@@ -16,6 +16,12 @@
       </a>
     </li>
     <li>
+      <a href="{% url 'chat_homepage' %}">
+        <span class="icon-count">29</span>
+        <i class="fa fa-envelope fa-2x"></i>
+      </a>
+    </li>
+    <li>
       <a href="{% url 'logout' %}">
         <i class="fa fa-sign-out-alt fa-2x"></i>
       </a>
