working volunteer feature signup

--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -133,7 +133,7 @@
 
         <div class="sidenav-url">
             <div class="url">
-                <a href="#profile" class="active">PROFILE</a>
+                <a href="#profile" class="active" >PROFILE</a>
                 <hr align="center">
             </div>
             <div class="url">
@@ -141,7 +141,7 @@
                 <hr align="center">
             </div>
             <div class="url">
-                <a href="{% url 'saved_events' %}">MY VOLUNCHEERS</a>
+                <a href="{% url 'savedevents' %}" >MY VOLUNCHEERS</a>
                 <hr align="center">
             </div>
         </div>
