--- a/voluncheer/templates/voluncheer/map.html
+++ b/voluncheer/templates/voluncheer/map.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>Simple Map</title>
+  <title>New York Organizations Map</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/map.css' %}">
   <script type="module" src="{% static 'js/map.js' %}"></script>
@@ -15,6 +16,7 @@
     <div id="map"></div>
     <p class="text-center top_spac"> Copyright &copy 2023 VolunCheer, org. All Rights Reserved.</p>
   </div>
+  {{ organizations|json_script:"organizations" }}
   <!-- prettier-ignore -->
   <script>
     (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
