add staffing check, protections, deregistration, and fix the bug that organization users cannot see opportunities from opportunityboard

--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -141,7 +141,7 @@
                 <hr align="center">
             </div>
             <div class="url">
-                <a href="{% url 'savedevents' %}" >MY VOLUNCHEERS</a>
+                <a href="{% url 'saved_events' %}" >MY VOLUNCHEERS</a>
                 <hr align="center">
             </div>
         </div>
