--- a/voluncheer/templates/voluncheer/opportunityboard.html
+++ b/voluncheer/templates/voluncheer/opportunityboard.html
@@ -144,24 +144,28 @@
                 {% csrf_token %}
                 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
                 {% for opportunity in opportunity_lists %}
-                 {% if user.is_volunteer %}
-                  {% if opportunity.is_published %}
+                  {% if opportunity.is_published and opportunity.staffing > 0 %}
                     <article name="article">
                     {% if opportunity.photo %}
-					          <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
+                    <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
                     {% endif %}
-					              <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
-                        <p class="vol-position-disciption-h3">Pubdate: {{ opportunity.pubdate }}</p>
-                        <p class="vol-position-disciption-h2">Address: {{ opportunity.address_1 }}</p>
-                        <p class="vol-position-disciption-h2">Date: {{ opportunity.date }}</p>
-                        <p class="vol-position-disciption-h2">End: {{ opportunity.end }}</p>
-                        <p>{{ opportunity.description }}</p>
+                      <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
+                      <p class="vol-position-disciption-h3">Pubdate: {{ opportunity.pubdate }}</p>
+                      <p class="vol-position-disciption-h2">Address: {{ opportunity.address_1 }}</p>
+                      <p class="vol-position-disciption-h2">Date: {{ opportunity.date }}</p>
+                      <p class="vol-position-disciption-h2">End: {{ opportunity.end }}</p>
+                      <p>{{ opportunity.description }}</p>
+                      {% if user.is_volunteer %}
+                        {% if user not in opportunity.volunteer.all %}
                         <a href="{% url 'signup_volunteer' opportunity.pk %}">
-                          <button type="button" id="myButton" value="false" class="readmore" onclick="toggleButton()">Register?</button>
+                          <button type="button" id="register-opportunity" value="false" class="readmore" onclick="toggleButton()">Register?</button>
                         </a>
-                      </article>
+                        {% else %}
+                        <button type="button" id="register-opportunity" value="false" class="readmore" onclick="toggleButton()">Registered!</button>
+                        {% endif %}
+                      {% endif %}
+                    </article>
                     {% endif %}
-                  
                 {% endfor %}
                 <article id="sponsors">
 					<h1>Sponsors</h1>
@@ -182,14 +186,13 @@
     <script>
       function toggleButton() {
         const button = document.getElementById("myButton"); // assuming the button has an ID of "myButton"
-        let value = button.value === "false" ? false : true; // toggle the boolean value
-        button.value = value.toString(); // update the button value attribute
-        button.innerHTML = value ? "Register?" : "Registered!"; // update the button name based on the boolean value
-        button.addEventListener('click', function(event) {
-            event.preventDefault();
-            alert('You are successfully registered for the event!');
-        });
-      }
+        var value = button.innerHTML
+        if (value == "Register?") {
+          alert('You are successfully registered for the event!');
+        } else {
+          alert('You already registered this event!');
+        }
+      };
     </script>
    
     <script>
