--- a/voluncheer/templates/voluncheer/opportunityboard.html
+++ b/voluncheer/templates/voluncheer/opportunityboard.html
@@ -156,7 +156,7 @@
                       <p class="vol-position-disciption-h2">End: {{ opportunity.end }}</p>
                       <p>{{ opportunity.description }}</p>
                       {% if user.is_volunteer %}
-                        {% if volunteer not in opportunity.volunteer.all %}
+                        {% if volunteer not in opportunity.volunteers.all %}
                         <a href="{% url 'signup_volunteer' opportunity.pk %}">
                           <button type="button" id="register-opportunity" value="false" class="readmore" onclick="toggleButton()">Register?</button>
                         </a>
