--- a/voluncheer/templates/navbar.html
+++ b/voluncheer/templates/navbar.html
@@ -10,7 +10,7 @@
       </a>
     </li>
     <li>
-      <a href="{% url 'opportunityboard' %}">
+      <a href="{% url 'opportunityboard' 1%}">
         <i class="fa fa-th fa-2x"></i>
       </a>
     </li>
