Remove the broken buttons in the navbar.

--- a/voluncheer/templates/navbar.html
+++ b/voluncheer/templates/navbar.html
@@ -1,7 +1,8 @@
 {% load static %}
 <div class="navbar-top">
   <div class="title">
-      <a href="{% url 'home' %}"><img src="{% static 'images/voluncheer_logo.png' %}" alt="logo" class="logo" height="80px"></a>
+    <a href="{% url 'home' %}"><img src="{% static 'images/voluncheer_logo.png' %}" alt="logo" class="logo"
+        height="80px"></a>
   </div>
   <ul>
     <li>
@@ -12,18 +13,6 @@
     <li>
       <a href="{% url 'opportunityboard' 1%}">
         <i class="fa fa-th fa-2x"></i>
-      </a>
-    </li>
-    <li>
-      <a href="messages">
-        <span class="icon-count">29</span>
-        <i class="fa fa-envelope fa-2x"></i>
-      </a>
-    </li>
-    <li>
-      <a href="notifications">
-        <span class="icon-count">59</span>
-        <i class="fa fa-bell fa-2x"></i>
       </a>
     </li>
     <li>
