changed volunteer_level to volunteer_hours_badge

--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -184,7 +184,7 @@
                     </span>
                 {% endfor %}
             </div>
-            <p class="volunteer-level"> Volunteer Level: {{ volunteer_level }}</p>
+            <p class="total-hours"> Total Volunteer Hours: {{ hours_volunteered }}</p>
             {% if hours_required %}
                 <p class="hours-required"> You have {{ hours_required }} hours to go until your next badge!</p>
             {% endif %}
