--- a/voluncheer/templates/opportunityboard/updateanopportunity.html
+++ b/voluncheer/templates/opportunityboard/updateanopportunity.html
@@ -18,7 +18,7 @@
                 <hr align="center">
             </div>
             <div class="url">
-                <a href="#settings">IMPACT</a>
+                <a class="not-implemented-yet" href="#">IMPACT</a>
                 <hr align="center">
             </div>
         </div>
@@ -28,7 +28,6 @@
     <!-- Main -->
     <div class="main">
         <h2>UPDATE OPPORTUNITY DETAILS</h2>
-        <h2>test</h2>
         <div class="card">
             <div class="card-body">
                 <form method="post" 
